2011-12-12  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] Add API to control whether SSL certificates should be checked.
        https://bugs.webkit.org/show_bug.cgi?id=74299

        Reviewed by Martin Robinson.

        * ewk/ewk_main.cpp:
        (_ewk_init_body): Explicitly disable certificate checks by default.
        * ewk/ewk_network.cpp:
        (ewk_network_tls_certificate_check_get):
        (ewk_network_tls_certificate_check_set):
        * ewk/ewk_network.h:

2011-12-07  Ryuan Choi  <ryuan.choi@samsung.com>

        [EFL] Introduce AssertMatchingEnums.cpp.
        https://bugs.webkit.org/show_bug.cgi?id=65238

        Reviewed by Filip Pizlo.

        Add AssertMatchingEnums.cpp to assert that various WebKit API enum values
        match to WebCore defined enum values.

        * CMakeListsEfl.txt: add AssertMatchingEnums.cpp.
        * WebCoreSupport/AssertMatchingEnums.cpp: Added.
        * ewk/ewk_frame.cpp:
        (ewk_frame_feed_touch_event): remove switch statement wichi convert WebKit API enum value to WebCore defined enum values.
        (ewk_frame_text_selection_type_get): Ditto.
        * ewk/ewk_view.cpp:
        (ewk_view_mode_set): Ditto.
        (ewk_view_mode_get): Ditto.
        (ewk_view_visibility_state_set): Ditto.
        (ewk_view_visibility_state_get): Ditto.
        * ewk/ewk_frame.h: fix order of enum values.
        * ewk/ewk_view.h: add missing enum value.

2011-12-07  Mary Wu  <mary.wu@torchmobile.com.cn>

        Change function name InitializeLoggingChannelsIfNecessary to follow coding style guideline
        https://bugs.webkit.org/show_bug.cgi?id=73986

        Reviewed by Kenneth Rohde Christiansen.

        * ewk/ewk_main.cpp:
        (_ewk_init_body):

2011-12-05  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] Do not lose message flags when converting to/from Soup Requests/Responses
        https://bugs.webkit.org/show_bug.cgi?id=73924

        Reviewed by Gustavo Noronha Silva.
